--- a/hugo.toml
+++ b/hugo.toml
@@ -15,3 +15,4 @@ theme = 'gokarna'
 [params]
   avatarURL = "/images/logo-faceonly.svg"
   customHeadHTML = '<link rel="stylesheet" href="/css/custom-styles.css">'
+  accentColor = "#313f76" # dark blue from logo
