--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,9 @@ languageCode = 'en-us'
 title = 'Brain & Experience Lab'
 theme = 'gokarna'
 
+[markup.goldmark.renderer]
+unsafe = true
+
 [menu]
   [[menu.main]]
     name = "News"
